# Clang

./: .cproject  .gitignore  .project  README.md  readme.md
input/: example.cpp  example_2.cpp  simpleLloops.cpp
src/: .cproject  CMakeLists.txt  libclang_example_tool.cpp
src/libToolingASTMatchers/: CMakeLists.txt  Myprinter.cpp  Myprinter.h  borrador.cpp  cMyPrinter.cpp  cMyPrinter.h  main.cpp
src/libToolingASTMatchers/example1/: CMakeLists.txt  MyPrinter.cpp  main.cpp  main.cpp~
src/libToolingASTMatchers/example2/: .cproject
src/libToolingASTMatchers/example2/src/: CMakeLists.txt  LoopConvert.cpp  LoopConvert2.cpp  README.md  simpleLloops.cpp
src/libToolingRecursiveASTVisitor/: CMakeLists.txt  FindNamedCallVisitor.cpp  FindNamedCallVisitor.h  borrador.cpp  cFindNamedCallAction.cpp  cFindNamedCallAction.h  cFindNamedCallConsumer.cpp  cFindNamedCallConsumer.h  cFindNamedCallVisitor.cpp  cFindNamedCallVisitor.h  main.cpp
src/libToolingRecursiveASTVisitor/example1/: CMakeLists.txt  FindNamedCallAction.cpp  FindNamedCallConsumer.cpp  FindNamedCallConsumer.h  FindNamedCallVisitor.cpp  main.cpp
src/libToolingRecursiveASTVisitor/example2/: CMakeLists.txt  FindNamedClassAction.cpp  FindNamedClassAction.h  FindNamedClassConsumer.cpp  FindNamedClassConsumer.h  FindNamedClassVisitor.cpp  FindNamedClassVisitor.h  README.md  README.md~  main.cpp
